# ottto

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PUBLIC_EXPORT_MANIFEST.json  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  macos-stable-release.yml
agent-adapters/claude-code-skill/: SKILL.md
agent-adapters/codex-skill/: SKILL.md
connectors/: README.md  registry.generated.json
crates/: Cargo.toml
crates/ottto-cli/: Cargo.toml
crates/ottto-cli/src/: main.rs
crates/ottto-connector-sdk/: Cargo.toml
crates/ottto-connector-testkit/: Cargo.toml
crates/ottto-connector-testkit/src/: lib.rs
crates/ottto-connector-testkit/tests/: first_party_sources.rs
crates/ottto-core/: Cargo.toml
crates/ottto-core/src/: account_store.rs  claude_statusline.rs  lib.rs  lifecycle.rs  local_client.rs  local_service.rs  redaction.rs  status.rs  token_store.rs
crates/ottto-protocol/: Cargo.toml
crates/ottto-service/: Cargo.toml  build.rs
crates/ottto-service/src/: adaptive_collector.rs  agent_status.rs  backfill.rs  command_env.rs  control.rs  detected_uses.rs  keychain.rs  lib.rs  macos_service.rs  main.rs  otlp_relay.rs  snapshot_client.rs  snapshot_sync.rs  snapshot_watcher.rs  snapshots.rs  unix_socket.rs  xpc_mach.rs  xpc_shim.c
crates/ottto-service/src/agent_configs/: claude_env.rs  codex_toml.rs  detection.rs  fence.rs  mod.rs
docs/: README.md  agent-adapters.md  connectors.md  diagnostics.md  examples.md  install.md  privacy.md  release-verification.md  session-2026-05-28-snapshot-v5-to-v6-followup.md  setup.md  support.md  troubleshooting.md
fixtures/cli/: help-contract.txt  (+10 more)
homebrew/: README.md
public-export/: README.md  deny-patterns.tsv  path-map.tsv  rewrite-rules.tsv  roots.txt
release/: README.md  manifest.schema.json
schemas/: collector-fixture.schema.json  collector-manifest.schema.json  connector-registry.schema.json  source-manifest.schema.json
scripts/: check_macos_resource_bundle_guard.sh  cyclonedx_sbom.sh  dev_e2e_smoke.sh  homebrew_formula.sh  hosted_native_installer.sh  macos_attestation_bind.sh  macos_dev_install.sh  macos_installer_qa.sh  macos_launch_smoke.sh  macos_manifest_signature.sh  macos_notarize.sh  macos_package.sh  macos_public_rc_evidence_template.sh  macos_public_rc_gate.sh  macos_release_gate.sh  macos_signing_readiness.sh  macos_stable_closeout_gate.sh  macos_stable_preflight.sh  macos_stable_qa_evidence_template.sh  public_repo_bootstrap_plan.sh  public_repo_contract_check.sh  public_repo_cutover_closeout.sh  public_repo_export_bundle.sh  public_repo_export_check.sh  public_repo_manifest_check.sh  public_repo_secret_scan.sh  public_repo_skeleton_check.sh  public_repo_surface_ci.sh  test_cyclonedx_sbom.sh  test_homebrew_formula.sh  test_hosted_native_installer.sh  test_macos_attestation_bind.sh  test_macos_installer_channel_policy.sh  test_macos_manifest_signature.sh  test_macos_notarize_filter.sh  test_macos_package_root_resolution.sh  test_macos_public_rc_gate.sh  test_macos_release_gate.sh  test_macos_resource_bundle_guard.sh  test_macos_signing_readiness.sh  (+13 more)
(+39 files in other folders)
