[package]
name = "ottto-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "ottto"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ottto-core = { path = "../ottto-core" }
ottto-protocol = { path = "../ottto-protocol" }
serde.workspace = true
serde_json.workspace = true
