[package]
name = "ottto-connector-testkit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Ottto Team"]
description = "Test helpers for Ottto source and collector package manifests."

[dependencies]
ottto-connector-sdk = { path = "../ottto-connector-sdk" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[lib]
path = "src/lib.rs"
