[package]
name = "ottto-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
getrandom.workspace = true
ottto-protocol = { path = "../ottto-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
security-framework-sys.workspace = true
