[package]
name = "ottto-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"

[[bin]]
name = "ottto-service"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
libc.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
ottto-core = { path = "../ottto-core" }
ottto-protocol = { path = "../ottto-protocol" }
plist.workspace = true
rusqlite.workspace = true
security-framework.workspace = true
security-framework-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml_edit.workspace = true
ureq.workspace = true

[build-dependencies]
cc.workspace = true
